--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     # 数据库连接池
     #url: jdbc:mysql://localhost:3306/mybatisplus-frame-test?serverTimezone=UTC
-    url: jdbc:p6spy:mysql://localhost:3306/mybatisplus-frame-test?serverTimezone=UTC
+    url: jdbc:p6spy:mysql://119.91.80.151:63306/mhp?serverTimezone=UTC
 
     # 数据库驱动
     # driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,7 +19,7 @@ spring:
 
     # 数据库用户名与密码
     username: 'root'
-    password: 'nm2295761'
+    password: 'mysql_hGaPJA'
 
 # MyBatis Plus配置
 # 关闭在控制台打印LOGO
